
[project]
name = "np_probes"
version = "0.1.0"
description = "Tools for generating probe data for Mindscope Neuropixel Experiments"
authors = [
    {name = "arjun.sridhar12345", email = "arjun.sridhar1998@gmail.com"},
]
dependencies = [
    "mypy>=1.3.0",
    "np-session>=0.6.12",
    "pyopenssl>=23.2.0",
    "SimpleITK>=2.2.1",
    "pynwb",
    "allensdk>=2.15.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
